--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,12 @@
 require:
   - rubocop-rails
 
+AllCops:
+  Exclude:
+    - 'bin/*'
+    - 'config/**/*'
+    - 'db/**/*'
+
 #    _____               ____ ____        __     _         __
 #   / ___/ _____ ____ _ / __// __/____   / /    (_)____   / /_
 #   \__ \ / ___// __ `// /_ / /_ / __ \ / /    / // __ \ / __/
